--- a/src/public/index.html
+++ b/src/public/index.html
@@ -32,30 +32,32 @@
     </div>
 
     <div class="container" id="contentWrap">
-        <div class="col-md-6 offset-md-1 mt-4">
-            <div class="card">
-                <div class="card-header">
-                    <h4>Ya podemos Chatear mi Amor</h4>
-                </div>
-
-                <div id="chat" class="card-body"></div>
-                <form id="message-form" class="card-footer">
-                    <div class="input-group">
-                        <input type="text" id="message" class="form-control">
-                        <div class="input-group-append">
-                            <input id="message" type="submit" class="btn btn-warning">
-                        </div>
+        <div class="row">
+            <div class="col-md-6 offset-md-1 mt-4">
+                <div class="card">
+                    <div class="card-header">
+                        <h4>Ya podemos Chatear mi Amor</h4>
                     </div>
-                </form>
-
+            
+                    <div id="chat" class="card-body"></div>
+                    <form id="message-form" class="card-footer">
+                        <div class="input-group">
+                            <input type="text" id="message" class="form-control">
+                            <div class="input-group-append">
+                                <input id="message" type="submit" class="btn btn-warning">
+                            </div>
+                        </div>
+                    </form>
+            
+                </div>
             </div>
-        </div>
-        <div class="card col-md-3">
-            <div class="card-header">
-                <h3>Users</h3>
-            </div>
-            <div class="card-body">
-                <div id="usernames"></div>
+            <div class="card col-md-3">
+                <div class="card-header">
+                    <h3>Users</h3>
+                </div>
+                <div class="card-body">
+                    <div id="usernames"></div>
+                </div>
             </div>
         </div>
     </div>
