--- a/src/public/index.html
+++ b/src/public/index.html
@@ -32,8 +32,8 @@
     </div>
 
     <div class="container" id="contentWrap">
-        <div class="row">
-            <div class="col-md-6 offset-md-1 mt-4">
+        <div class="row mt-2">
+            <div class="col-md-6 offset-md-1">
                 <div class="card">
                     <div class="card-header">
                         <h4>Ya podemos Chatear mi Amor</h4>
@@ -51,12 +51,14 @@
             
                 </div>
             </div>
-            <div class="card col-md-3">
-                <div class="card-header">
-                    <h3>Users</h3>
-                </div>
-                <div class="card-body">
-                    <div id="usernames"></div>
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Users</h3>
+                    </div>
+                    <div class="card-body">
+                        <div id="usernames"></div>
+                    </div>
                 </div>
             </div>
         </div>
