--- a/src/public/index.html
+++ b/src/public/index.html
@@ -36,7 +36,7 @@
             <div class="col-md-6 offset-md-1">
                 <div class="card">
                     <div class="card-header">
-                        <h4>Ya podemos Chatear mi Amor</h4>
+                        <h4>Chat privado</h4>
                     </div>
             
                     <div id="chat" class="card-body"></div>
